<resources>
    <string name="app_name">Aliucord Installer</string>
    <string name="patching_placeholder">Patching apk..</string>
    <string name="supported_version">Supported Discord version: 63.2 (1456)</string>
    <string name="path_to_discord_apk">Path to discord apk</string>
    <string name="from_storage">From storage</string>
    <string name="from_installed">Installed app</string>
    <string name="install">Install</string>
    <string name="needed_permission">You need to grant storage permission to use this app.</string>
    <string name="grant">Grant permission</string>
    <string name="invalid_path">Invalid path to apk</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
