<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/grantPermissionLayout"
        style="@style/MainLinearLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/needed_permission"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="checkPermissions"
            android:text="@string/grant" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:visibility="gone"
        style="@style/MainLinearLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/supported_version"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pathInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:hint="@string/path_to_discord_apk" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="selectFromStorage"
                android:text="@string/from_storage"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="selectFromInstalledApp"
                android:text="@string/from_installed"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:onClick="selectDownloadAtRuntime"
                android:text="@string/download_at_runtime"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="install"
            android:text="@string/install" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/patchingLayout"
        style="@style/MainLinearLayout"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="356dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/patchingState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/patching_placeholder"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
